--- a/styles/main.scss
+++ b/styles/main.scss
@@ -60,6 +60,7 @@ header {
     max-width: 80px;
     max-height: 60px;
     transition: opacity 0.3s;
+    display: block;
 }
 
 .navbar-links li a {
