--- a/styles/_variables.scss
+++ b/styles/_variables.scss
@@ -2,3 +2,4 @@ $primary-color: #A6D9C6;
 $background-color: #ffffff;
 $text-color: $background-color;
 $font-family: Arial, sans-serif;
+$font-family-primary: 'ParisAvenue', Arial, sans-serif;
