--- a/styles/main.css
+++ b/styles/main.css
@@ -1,7 +1,13 @@
+@font-face {
+  font-family: "ParisAvenue";
+  src: url("../webFonts/ParisAvenue/font.woff2") format("woff2"), url("../webFonts/ParisAvenue/font.woff") format("woff");
+  font-weight: normal;
+  font-style: normal;
+  font-display: swap;
+}
 body {
-  font-family: Arial, sans-serif;
+  font-family: "ParisAvenue", Arial, sans-serif;
   background-color: #A6D9C6;
-  color: #333;
   margin: 0;
   min-height: 100vh;
   display: flex;
@@ -13,36 +19,16 @@ header {
 }
 
 .navbar {
-  display: flex;
-  align-items: center;
-  justify-content: space-between;
   padding: 1rem 2rem;
   background: #A6D9C6;
-  color: #fff;
-  box-shadow: 0 2px 8px rgba(0, 0, 0, 0.04);
-  position: relative;
-  z-index: 10;
 }
 
 .navbar-links {
-  list-style: none;
   display: flex;
-  gap: 2rem;
-  margin: 0;
-  padding: 0;
   align-items: center;
-}
-
-.navbar-links-left {
-  flex: 1 1 0;
-  justify-content: flex-end;
-  display: flex;
-}
-
-.navbar-links-right {
-  flex: 1 1 0;
-  justify-content: flex-start;
-  display: flex;
+  justify-content: space-between;
+  list-style: none;
+  padding: 0;
 }
 
 .navbar-logo-container {
@@ -63,14 +49,6 @@ header {
 
 .navbar-links li a {
   text-decoration: none;
-  color: #fff;
-  font-weight: bold;
-  font-size: 1.1rem;
-  transition: color 0.2s;
-}
-
-.navbar-links li a:hover {
-  color: #333;
 }
 
 .logo-center-container {
@@ -116,12 +94,6 @@ footer {
 
 p {
   color: white;
-}
-
-.image {
-  width: 100%;
-  height: auto;
-  max-width: 100px;
 }
 
 .overlay {
