--- a/styles/main.css
+++ b/styles/main.css
@@ -6,12 +6,11 @@
   font-display: swap;
 }
 body {
-  font-family: "ParisAvenue", Arial, sans-serif;
-  background-color: #A6D9C6;
   margin: 0;
   min-height: 100vh;
   display: flex;
   flex-direction: column;
+  background-color: #A6D9C6;
 }
 
 header {
@@ -19,8 +18,7 @@ header {
 }
 
 .navbar {
-  padding: 1rem 2rem;
-  background: #A6D9C6;
+  padding: 1rem 6rem;
 }
 
 .navbar-links {
@@ -29,6 +27,7 @@ header {
   justify-content: space-between;
   list-style: none;
   padding: 0;
+  font-family: "ParisAvenue", Arial, sans-serif;
 }
 
 .navbar-logo-container {
@@ -49,6 +48,13 @@ header {
 
 .navbar-links li a {
   text-decoration: none;
+  color: #ffffff;
+  font-size: 1.4rem;
+  transition: transform 0.3s;
+  display: inline-block;
+}
+.navbar-links li a:hover {
+  transform: scale(1.07);
 }
 
 .logo-center-container {
@@ -81,19 +87,12 @@ section {
 }
 
 footer {
-  background: #333;
-  color: #fff;
   text-align: center;
   padding: 1.5rem 0 1rem 0;
   font-size: 1rem;
   letter-spacing: 0.05em;
   flex-shrink: 0;
   width: 100%;
-  box-shadow: 0 -2px 8px rgba(0, 0, 0, 0.04);
-}
-
-p {
-  color: white;
 }
 
 .overlay {
