--- a/styles/_variables.scss
+++ b/styles/_variables.scss
@@ -1,5 +1,5 @@
 $primary-color: #A6D9C6;
-$background-color: #ffffff;
-$text-color: $background-color;
+$white-color: #ffffff;
+$text-color: $white-color;
 $font-family: Arial, sans-serif;
-$font-family-primary: 'ParisAvenue', Arial, sans-serif;
+$font-family-title: 'ParisAvenue', Arial, sans-serif;
