--- a/styles/main.css
+++ b/styles/main.css
@@ -17,62 +17,6 @@ header {
   width: 100%;
 }
 
-.navbar {
-  padding: 1rem 6rem;
-}
-
-.navbar-links {
-  display: flex;
-  align-items: center;
-  justify-content: space-between;
-  list-style: none;
-  padding: 0;
-  font-family: "ParisAvenue", Arial, sans-serif;
-}
-
-.navbar-logo-container {
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  flex: 0 0 auto;
-  height: 60px;
-  min-width: 120px;
-}
-
-.navbar-logo {
-  max-width: 80px;
-  max-height: 60px;
-  transition: opacity 0.3s;
-  display: block;
-}
-
-.navbar-links li a {
-  text-decoration: none;
-  color: #ffffff;
-  font-size: 1.4rem;
-  transition: transform 0.3s;
-  display: inline-block;
-}
-.navbar-links li a:hover {
-  transform: scale(1.07);
-}
-
-.logo-center-container {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  height: 60vh;
-  margin-bottom: 2rem;
-}
-
-.logo-center {
-  max-width: 180px;
-  width: 60vw;
-  height: auto;
-  transition: transform 1s cubic-bezier(0.77, 0, 0.175, 1), opacity 0.5s;
-  will-change: transform, opacity;
-}
-
 main {
   flex: 1 0 auto;
   width: 100%;
@@ -95,6 +39,58 @@ footer {
   width: 100%;
 }
 
+.navbar {
+  padding: 1rem 6rem;
+}
+.navbar__links {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  list-style: none;
+  padding: 0;
+  font-family: "ParisAvenue", Arial, sans-serif;
+}
+.navbar__logo-container {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex: 0 0 auto;
+  height: 60px;
+  min-width: 120px;
+}
+.navbar__logo {
+  max-width: 80px;
+  max-height: 60px;
+  transition: opacity 0.3s;
+  display: block;
+}
+.navbar__links li a {
+  text-decoration: none;
+  color: #ffffff;
+  font-size: 1.4rem;
+  transition: transform 0.3s;
+  display: inline-block;
+}
+.navbar__links li a:hover {
+  transform: scale(1.07);
+}
+
+.logo-center-container {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 60vh;
+  margin-bottom: 2rem;
+}
+
+.logo-center {
+  max-width: 180px;
+  width: 60vw;
+  height: auto;
+  transition: transform 1s cubic-bezier(0.77, 0, 0.175, 1), opacity 0.5s;
+  will-change: transform, opacity;
+}
+
 .overlay {
   position: fixed;
   top: 0;
@@ -110,8 +106,7 @@ footer {
   justify-content: center;
   transition: opacity 0.7s cubic-bezier(0.77, 0, 0.175, 1);
 }
-
-.overlay-logo {
+.overlay__logo {
   max-width: 180px;
   width: 60vw;
   height: auto;
@@ -119,7 +114,7 @@ footer {
   will-change: transform, opacity;
 }
 
-.logo-center-container, .logo-center {
+.logo__center-container, .logo__center {
   display: none !important;
 }
 
