GSAP: Color and Size

--- a/styles/_variables.scss
+++ b/styles/_variables.scss
@@ -1,4 +1,5 @@
 $primary-color: #A6D9C6;
+$primary-color-dark: #95C7B1;
 $white-color: #ffffff;
 $text-color: $white-color;
 $font-family: Arial, sans-serif;
