--- a/styles/main.scss
+++ b/styles/main.scss
@@ -20,46 +20,6 @@ body {
     cursor: none; /* Hide default cursor */
 }
 
-/* Custom cursor styling */
-.custom-cursor {
-    width: 10px;
-    height: 10px;
-    background-color: $white-color;
-    border-radius: 50%;
-    position: fixed;
-    pointer-events: none;
-    z-index: 9999;
-    transform: translate(-50%, -50%);
-    transition: width 0.2s, height 0.2s, background 0.2s;
-}
-
-.cursor-circle {
-    width: 30px;
-    height: 30px;
-    border: 1px solid $white-color;
-    border-radius: 50%;
-    position: fixed;
-    pointer-events: none;
-    z-index: 9998;
-    transform: translate(-50%, -50%);
-    opacity: 0;
-    transition: opacity 0.2s, width 0.2s, height 0.2s;
-}
-
-/* Style for links to change cursor appearance */
-a {
-    cursor: none;
-    
-    &:hover ~ .custom-cursor {
-        width: 6px;
-        height: 6px;
-    }
-    
-    &:hover ~ .cursor-circle {
-        opacity: 1;
-    }
-}
-
 header {
     width: 100%;
     position: relative;
@@ -180,10 +140,51 @@ footer {
     display: none !important;
 }
 
+/* Custom cursor styling */
+.custom-cursor {
+    width: 10px;
+    height: 10px;
+    background-color: $white-color;
+    border-radius: 50%;
+    position: fixed;
+    pointer-events: none;
+    z-index: 9999;
+    transform: translate(-50%, -50%);
+    transition: width 0.2s, height 0.2s, background 0.2s;
+}
+
+.cursor-circle {
+    width: 10px;
+    height: 10px;
+    border: 1.7px solid $primary-color-dark;
+    border-radius: 50%;
+    position: fixed;
+    pointer-events: none;
+    z-index: 9998;
+    transform: translate(-50%, -50%);
+    opacity: 0;
+    transition: width 0.3s ease-out, height 0.3s ease-out, opacity 0.3s;
+}
+
+a {
+    cursor: none;
+    
+    &:hover ~ .custom-cursor {
+        width: 6px;
+        height: 6px;
+    }
+    
+    &:hover ~ .cursor-circle {
+        width: 30px;
+        height: 30px;
+        opacity: 1;
+    }
+}
+
 .cursor-trail {
     width: 20px;
     height: 20px;
-    background: rgba(166, 217, 198, 0.4);
+    background: $primary-color-shade;
     border-radius: 50%;
     position: fixed;
     pointer-events: none;
@@ -195,13 +196,13 @@ footer {
 .cursor-trail:nth-child(2) {
     width: 15px;
     height: 15px;
-    background: rgba(166, 217, 198, 0.3);
+    background: $primary-color-shade;
 }
 
 .cursor-trail:nth-child(3) {
     width: 10px;
     height: 10px;
-    background: rgba(166, 217, 198, 0.2);
+    background: $primary-color-shade;
 }
 
 .cursor-trail__head, .cursor-trail__tail {
@@ -220,7 +221,7 @@ footer {
     position: fixed;
     pointer-events: none;
     z-index: -2;
-    background: $primary-color-dark;
+    background: $primary-color-shade;
     mix-blend-mode: normal;
     transition: opacity 0.3s ease;
     will-change: transform, width, height, border-radius, rotate;
@@ -229,7 +230,7 @@ footer {
 .cursor-worm__dot {
     width: 39px;
     height: 39px;
-    background: $primary-color-dark;
+    background: $primary-color-shade;
     border-radius: 50%;
     position: fixed;
     pointer-events: none;
@@ -241,7 +242,7 @@ footer {
     position: fixed;
     pointer-events: none;
     z-index: -2;
-    background: $primary-color-dark;
+    background: $primary-color-shade;
     transition: opacity 0.3s ease;
     will-change: transform, width, height, border-radius, rotate;
 }
