Font: Josefin Sans

--- a/styles/_variables.scss
+++ b/styles/_variables.scss
@@ -1,8 +1,9 @@
 $primary-color: #A6D9C6;
+$secondary-color: #D8BFAA;
 $primary-color-shade: #9BD4BF;
 $primary-color-dark: #5B9279;
 $black-color: #12130F;
 $white-color: #FFFFFF;
 $text-color: $white-color;
-$font-family: Arial, sans-serif;
+$font-family: 'Josefin Sans', Arial, sans-serif;
 $font-family-title: 'ParisAvenue', Arial, sans-serif;
