--- a/styles/main.css
+++ b/styles/main.css
@@ -52,6 +52,15 @@ footer {
   position: relative;
   z-index: 2;
 }
+footer .footer__credit {
+  font-size: 0.8rem;
+  opacity: 0.7;
+  margin-top: 0.5rem;
+}
+footer .footer__credit a {
+  color: #FFFFFF;
+  text-decoration: none;
+}
 
 .navbar {
   padding: 1rem 6rem;
