--- a/styles/main.scss
+++ b/styles/main.scss
@@ -273,7 +273,7 @@ a {
   pointer-events: none;
   overflow: visible;
   display: block;
-  z-index: 1;
+  z-index: -1;
 
   &-fill {
     fill: $primary-color;
@@ -281,7 +281,7 @@ a {
     transition: opacity 0.3s;
   }
   &-stroke {
-    stroke: #000;
+    stroke: red;
     stroke-width: 3.4;
     fill: none;
     stroke-miterlimit: 10;
@@ -289,4 +289,14 @@ a {
     stroke-dashoffset: 800;
     transition: stroke-dashoffset 0.7s cubic-bezier(0.77,0,0.175,1);
   }
+}
+
+.navbar__links > li > a {
+  position: relative;
+  z-index: 1;
+}
+
+.navbar__link-text {
+  position: relative;
+  z-index: 1;
 }
