--- a/styles/_cursor.scss
+++ b/styles/_cursor.scss
@@ -17,7 +17,7 @@
 .cursor-circle {
     width: 10px;
     height: 10px;
-    border: 1.7px solid $primary-color-dark;
+    border: 1.5px solid $primary-color-dark;
     border-radius: 50%;
     position: fixed;
     pointer-events: none;
@@ -42,56 +42,11 @@ a {
     }
 }
 
-.cursor-trail {
-    width: 20px;
-    height: 20px;
-    background: $primary-color-shade;
-    border-radius: 50%;
-    position: fixed;
-    pointer-events: none;
-    z-index: -1;
-    mix-blend-mode: multiply;
-    transition: opacity 0.3s ease;
-}
-
-.cursor-trail:nth-child(2) {
-    width: 15px;
-    height: 15px;
-    background: $primary-color-shade;
-}
-
-.cursor-trail:nth-child(3) {
-    width: 10px;
-    height: 10px;
-    background: $primary-color-shade;
-}
-
-.cursor-trail__head, .cursor-trail__tail {
-    width: 30px;
-    height: 30px;
-    background: #fff;
-    border-radius: 50%;
-    position: fixed;
-    pointer-events: none;
-    z-index: -1;
-    mix-blend-mode: normal;
-    transition: opacity 0.3s ease;
-}
-
-.cursor-trail__connector {
-    position: fixed;
-    pointer-events: none;
-    z-index: -2;
-    background: $primary-color-shade;
-    mix-blend-mode: normal;
-    transition: opacity 0.3s ease;
-    will-change: transform, width, height, border-radius, rotate;
-}
 
 .cursor-worm__dot {
     width: 39px;
     height: 39px;
-    background: $primary-color-shade;
+    background: $primary-color-opaque;
     border-radius: 50%;
     position: fixed;
     pointer-events: none;
@@ -103,7 +58,7 @@ a {
     position: fixed;
     pointer-events: none;
     z-index: -2;
-    background: $primary-color-shade;
+    background: $primary-color-opaque;
     transition: opacity 0.3s ease;
     will-change: transform, width, height, border-radius, rotate;
 }
