--- a/styles/_variables.scss
+++ b/styles/_variables.scss
@@ -1,5 +1,5 @@
 $primary-color: #A6D9C6;
-$secondary-color: #D8BFAA;
+$primary-color-opaque: #DBF0E8;
 $primary-color-shade: #9BD4BF;
 $primary-color-dark: #5B9279;
 $black-color: #12130F;
