--- a/styles/_base.scss
+++ b/styles/_base.scss
@@ -16,7 +16,7 @@ body {
     min-height: 100vh;
     display: flex;
     flex-direction: column;
-    background-color: $primary-color;
+    background-color: $white-color;
     color: $black-color;
     font-family: $font-family;
     font-weight: 300;
@@ -65,7 +65,7 @@ footer {
         margin-top: 0.5rem;
         
         a {
-            color: $white-color;
+            color: $primary-color-dark;
             text-decoration: none;
         }
     }
