--- a/styles/_navbar.scss
+++ b/styles/_navbar.scss
@@ -32,13 +32,14 @@
     
     &__links li a {
         text-decoration: none;
-        color: $white-color;
+        color: $primary-color;
         font-size: 1.4rem;
-        transition: transform 0.3s;
+        transition: all 0.3s;
         display: inline-block;
     
         &:hover {
-            transform: scale(1.07);
+            transform: scale(1.02);
+            color: $primary-color-dark;
         }
     }
 }
