--- a/styles/_components.scss
+++ b/styles/_components.scss
@@ -24,7 +24,7 @@
     top: 0; left: 0; right: 0; bottom: 0;
     width: 100vw;
     height: 100vh;
-    background: $primary-color;
+    background: $white-color;
     z-index: 9999;
     display: flex;
     align-items: center;
