--- a/styles/_components.scss
+++ b/styles/_components.scss
@@ -434,6 +434,14 @@
         color: $black-color;
         border-bottom: 1px solid #f0f0f0;
         padding-bottom: 0.5rem;
+        display: flex;
+        align-items: center;
+        gap: 0.5rem;
+    }
+    
+    &__icon {
+        font-size: 1.5rem;
+        display: inline-block;
     }
     
     &__items {
