Keep swirl visible on active page and match link text color

--- a/styles/_navbar.scss
+++ b/styles/_navbar.scss
@@ -89,6 +89,10 @@
             transform: scale(1.02);
             color: $primary-color-dark;
         }
+
+        &.navbar__link--active {
+            color: $primary-color-dark;
+        }
     }
 
     &__mobile-overlay {
