--- a/styles/_base.scss
+++ b/styles/_base.scss
@@ -31,21 +31,12 @@ a, button, input, textarea, select, .btn, .service-card, [role="button"] {
 }
 
 // Layout components
-header {
-    width: 100%;
-    position: fixed;
-    top: 0;
-    left: 0;
-    z-index: 100;
-    background-color: transparent;
-}
-
 main {
     flex: 1 0 auto;
     width: 100%;
     max-width: 900px;
     margin: 0 auto;
-    padding: 0 1rem 4rem 1rem;
+    padding: 6rem 1rem 4rem 1rem;
     box-sizing: border-box;
     position: relative;
     z-index: 2;
