Add active link styling and swirl effect to hamburger menu
- Add active state detection for mobile navigation links
- Display swirl SVG with fill for active links in hamburger menu
- Apply primary-dark color to active mobile links
- Match desktop navbar active link behavior in mobile menu

--- a/styles/_navbar.scss
+++ b/styles/_navbar.scss
@@ -151,6 +151,10 @@
             transform: scale(1.05);
             background-color: rgba($primary-color, 0.1);
         }
+
+        &.navbar__link--active {
+            color: $primary-color-dark;
+        }
     }
 
     // Responsive breakpoints
@@ -206,6 +210,10 @@
     stroke: $primary-color-dark;
     stroke-width: 3.4;
     fill: none;
+  }
+
+  &--mobile {
+    bottom: -5px;
   }
 }
 
