--- a/styles/main.css
+++ b/styles/main.css
@@ -213,6 +213,9 @@ footer .footer__credit a {
   transform: scale(1.05);
   background-color: rgba(166, 217, 198, 0.1);
 }
+.navbar__mobile-link.navbar__link--active {
+  color: #5B9279;
+}
 @media (max-width: 768px) {
   .navbar {
     padding: 1rem 2rem;
@@ -261,6 +264,9 @@ footer .footer__credit a {
   stroke: #5B9279;
   stroke-width: 3.4;
   fill: none;
+}
+.navbar__swirl--mobile {
+  bottom: -5px;
 }
 
 .navbar__links > li > a {
@@ -405,6 +411,7 @@ a:hover ~ .cursor-circle {
 .page-header {
   text-align: center;
   margin-bottom: 3rem;
+  padding-top: 7rem;
 }
 .page-header__title {
   font-family: "ParisAvenue", sans-serif;
@@ -421,12 +428,28 @@ a:hover ~ .cursor-circle {
 
 .hero {
   display: flex;
+  flex-direction: column;
   align-items: center;
   justify-content: center;
   text-align: center;
   min-height: 100vh;
   margin-bottom: 4rem;
   padding: 0 1rem;
+  position: relative;
+}
+.hero__logo {
+  display: none;
+  max-width: 80px;
+  height: auto;
+  position: absolute;
+  top: 10rem;
+  left: 50%;
+  transform: translateX(-50%);
+}
+@media (max-width: 768px) {
+  .hero__logo {
+    display: block;
+  }
 }
 .hero__content {
   max-width: 600px;
